scripts/nullaway/original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8.txt
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/Main.java:89: error: [NullAway] @NonNull field Main$Person.datiqingkuang not initialized
		public List<Integer> datiqingkuang;
		                     ^
    (see http://t.uber.com/nullaway )
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/interpreter/InterpreterTest.java:80: error: [NullAway] unboxing of a @Nullable value
		return var.get(key);
		              ^
    (see http://t.uber.com/nullaway )
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/singleton/Singleton_doublecheck.java:5: error: [NullAway] assigning @Nullable expression to @NonNull field
	private static volatile Singleton_doublecheck instance = null;
	                                              ^
    (see http://t.uber.com/nullaway )
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/mediator/AbstractMediator.java:10: error: [NullAway] initializer method does not guarantee @NonNull fields purchase (line 5), sale (line 6), stock (line 7) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public AbstractMediator()
	       ^
    (see http://t.uber.com/nullaway )
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/factory/simplefactory/Simplefactory1.java:15: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/responsechain/ResponsechainTest.java:67: error: [NullAway] initializer method does not guarantee @NonNull field next (line 65) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	protected ChainHandler(int maxNum)
	          ^
    (see http://t.uber.com/nullaway )
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:19: error: [NullAway] @NonNull static field currentLiftState not initialized
	public static ILiftState currentLiftState;
	                         ^
    (see http://t.uber.com/nullaway )
Note: ../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/observe/ObserveTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
7 errors
